<resources>
    <string name="app_name">eoschat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Friends</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="title_setting">Setting</string>
    <string name="set_notify">open the background process authority</string>
    <string name="hint_enter_a_message">type word</string>
    <string name="copied_message">copied</string>
    <string name="action_delete">delete</string>
    <string name="action_copy">copy</string>
    <string name="type_account_name">type account name</string>
    <string name="type_private_key">type private key</string>
    <string name="type_node_address">type node address</string>
    <string name="type_contract_account">type contract account</string>
    <string name="type_encrypt_privatekey">type encrypt privatekey</string>
    <string name="type_password">type password</string>
    <string name="type_password2">type password again</string>
    <string name="password_not_same">two password are not same</string>
    <string name="default_node_address">https://nicehero.io/eosrpc</string>
    <string name="default_contract_account">eoschat</string>
    <string name="submit">submit</string>
    <string name="import_backup">import backup</string>
    <string name="register_account">register</string>
    <string name="random_encrypt_key">random</string>
    <string name="title_bind_account">Bind Account</string>
    <string name="no_account_name">no account name</string>
    <string name="no_private_key">no private key</string>
    <string name="no_node_address">no node address</string>
    <string name="no_contract_account">no contract account</string>
    <string name="no_encrypt_privatekey">no encrypt privatekey</string>
    <string name="error_private_key_or_account">error_private_key_or_account</string>
</resources>
