<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/typeAccountName"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/type_account_name"
        android:hint="@string/type_account_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typePrivateKey"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="69dp"
        android:contentDescription="@string/type_private_key"
        android:hint="@string/type_private_key"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typeNodeAddress"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="134dp"
        android:contentDescription="@string/type_node_address"
        android:hint="@string/type_node_address"
        android:inputType="textUri"
        android:text="@string/default_node_address"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typeContractAccount"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="202dp"
        android:contentDescription="@string/type_contract_account"
        android:hint="@string/type_contract_account"
        android:inputType="text"
        android:text="@string/default_contract_account"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typeEncryptPrivateKey"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="267dp"
        android:contentDescription="@string/type_encrypt_privatekey"
        android:hint="@string/type_encrypt_privatekey"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typePassword"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="335dp"
        android:contentDescription="@string/type_password"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/typePassword2"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="399dp"
        android:contentDescription="@string/type_password"
        android:hint="@string/type_password2"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="7dp"
        android:text="@string/submit"
        android:textSize="30sp" />

</RelativeLayout>
